# testangel

./: .editorconfig  .gitignore  Cargo.toml  README.md  icons.toml
.github/workflows/: check-version-bumped.yml  checks.yml  rust-build.yml
testangel/: Cargo.toml  build.rs
testangel-arithmetic/: Cargo.toml
testangel-arithmetic/src/: lib.rs  main.rs
testangel-compare/: Cargo.toml
testangel-compare/src/: lib.rs
testangel-convert/: Cargo.toml
testangel-convert/src/: lib.rs
testangel-date/: Cargo.toml
testangel-date/src/: lib.rs
testangel-dummy/: Cargo.toml
testangel-dummy/src/: main.rs
testangel-engine/: Cargo.toml
testangel-engine-macros/: Cargo.toml
testangel-engine-macros/src/: instruction_implementation.rs  kv_attributes.rs  lib.rs
testangel-engine/src/: lib.rs
testangel-evidence/: Cargo.toml
testangel-evidence/src/: lib.rs
testangel-ipc/: Cargo.toml  build.rs  cbindgen.toml  demo_c_engine.c
testangel-ipc/src/: evidence.rs  instruction.rs  lib.rs  main.rs  value.rs
testangel-ipc/src/ffi/: evidence.rs  example_prototypes.rs  instruction.rs  logging.rs  mod.rs  result.rs  value.rs
testangel-rand/: Cargo.toml
testangel-rand/src/: lib.rs
testangel-regex/: Cargo.toml
testangel-regex/src/: lib.rs
testangel-time/: Cargo.toml
testangel-time/src/: lib.rs
testangel-user-interaction/: Cargo.toml
testangel-user-interaction/src/: lib.rs
testangel/data/: icons.gresource.xml
testangel/locales/: en.toml
testangel/locales/en/: main.ftl
testangel/locales/sv/: main.ftl
testangel/src/: action.rs  action_loader.rs  demo_action.taaction  flow_running.rs  ipc.rs  lib.rs  main.rs  modals.rs  types.rs  version.rs
testangel/src/action/: mod.rs  types.rs
testangel/src/action_syntax/: descriptor_grammar.pest  mod.rs
testangel/src/automation_flow/: mod.rs  types.rs
testangel/src/fonts/: LICENSE
testangel/src/next_ui/: about.rs  actions.rs  file_filters.rs  flows.rs  header_bar.rs  help.rs  lang.rs  mod.rs
testangel/src/next_ui/actions/: execution_dialog.rs  header.rs  instruction_component.rs  metadata_component.rs  mod.rs  outputs.rs  params.rs
testangel/src/next_ui/components/: add_step_factory.rs  literal_input.rs  mod.rs  variable_row.rs
testangel/src/next_ui/flows/: action_component.rs  execution_dialog.rs  header.rs  mod.rs
testangel/src/next_ui/flows/header/: add_step_factory.rs  mod.rs
testangel/src/report_generation/: mod.rs
testangel/src/testflow/: mod.rs  types.rs
testangel/src/types/: action_v1.rs  action_v2.rs  mod.rs  new_action.lua  old_types.rs
testangel/src/ui/: about.rs  action.rs  action_editor.rs  action_running.rs  automation_flow.rs  file_filters.rs  flow_editor.rs  flow_running.rs  get_started.rs  header_bar.rs  lang.rs  mod.rs  modals.rs
testangel/src/ui/actions/: header.rs  instruction_component.rs  metadata_component.rs  mod.rs  outputs.rs  params.rs
testangel/src/ui/actions/completion_proposal_list/: imp.rs  mod.rs
testangel/src/ui/actions/completion_provider_engines/: imp.rs  mod.rs
testangel/src/ui/actions/completion_provider_engines/item/: imp.rs  mod.rs
testangel/src/ui/actions/completion_provider_instructions/: imp.rs  mod.rs
testangel/src/ui/actions/completion_provider_instructions/item/: imp.rs  mod.rs
testangel/src/ui/components/: add_step_factory.rs  literal_input.rs  mod.rs  variable_row.rs
testangel/src/ui/file_filters/: mod.rs
testangel/src/ui/file_filters/gobj/: imp.rs  mod.rs
testangel/src/ui/flows/: action_component.rs  execution_dialog.rs  header.rs  mod.rs
