[workspace.package]
version = "0.22.0-rc.6"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "testangel",
    "testangel-engine",
    "testangel-engine-macros",
    "testangel-evidence",
    "testangel-rand",
    "testangel-time",
    "testangel-ipc",
    "testangel-user-interaction",
]
