[workspace.package]
version = "0.23.0-rc.1"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "testangel",
    "testangel-engine",
    "testangel-engine-macros",
    "testangel-evidence",
    "testangel-rand",
    "testangel-time",
    "testangel-ipc",
    "testangel-user-interaction",
]
