[package]
name = "testangel-arithmetic"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "An arithmetic engine plugin for testangel."
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
lazy_static = "1.4.0"
testangel-ipc = { path = "../testangel-ipc" }
