[package]
name = "testangel-arithmetic"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "An arithmetic engine plugin for testangel."
version = "0.14.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
testangel-engine = { path = "../testangel-engine" }
