[package]
name = "testangel-compare"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "A comparison engine plugin for testangel."
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
testangel-engine = { path = "../testangel-engine" }
