[package]
name = "testangel-engine-macros"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "Macros for testangel-engine."
version = "1.0.0"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.100", features = ["full"] }
