[package]
name = "testangel-engine"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "A engine interface for testangel."
version = "0.16.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testangel-ipc = { path = "../testangel-ipc" }
testangel-engine-macros = { path = "../testangel-engine-macros" }
