[package]
name = "testangel-evidence"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "An evidence engine plugin for testangel."
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamic-plugin = { version = "0.6.0", features = [ "client" ] }
testangel-engine = { path = "../testangel-engine" }
