[package]
name = "testangel-ipc"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
schemas = ["dep:schemars"]

[dependencies]
schemars = { version = "0.8.12", features = ["derive"], optional = true }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
