[package]
name = "testangel-rand"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "A randomisation engine plugin for testangel."
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamic-plugin = { version = "0.6.0", features = [ "client" ] }
rand = "0.9.0"
rand_regex = "0.18.0"
testangel-engine = { path = "../testangel-engine" }
thiserror = "2.0.4"
