[package]
name = "testangel-regex"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "A regular expression engine plugin for testangel."
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.3"
testangel-engine = { path = "../testangel-engine" }
thiserror = "1.0"
