[package]
name = "testangel-time"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "A time engine plugin for testangel."
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
testangel-engine = { path = "../testangel-engine" }
thiserror = "2.0.4"
