[package]
name = "testangel-user-interaction"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "A user interaction engine plugin for testangel."
version = "0.17.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rfd = { version = "0.12.0", default-features = false, features = [ "xdg-portal" ] }
testangel-engine = { path = "../testangel-engine" }
thiserror = "1.0"
