[package]
name = "testangel"
version = "0.17.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "testangel-executor"
path = "src/bin/executor.rs"
required-features = [ "cli" ]

[features]
default = [ "ui" ]
ui = [ "dep:iced", "dep:opener", "dep:rfd", "dep:fern" ]
next-ui = [ "dep:relm4", "dep:relm4-icons", "dep:opener", "dep:fern", "dep:rust-i18n", "dep:fuzzy-matcher", "dep:sys-locale" ]
cli = [ "dep:clap", "dep:pretty_env_logger" ]
windows-keep-console-window = []

[dependencies]
testangel-ipc = { path = "../testangel-ipc" }
clap = { version = "4.3.19", features = [ "derive" ], optional = true }
fern = { version = "0.6.2", optional = true }
libloading = "0.8"
log = "0.4.19"
image = { version = "0.24.7", default-features = false, features = ["png"] }
thiserror = "1.0"
pretty_env_logger = { version = "0.5.0", optional = true }
serde = { version = "1.0.180", features = [ "derive" ] }
uuid = { version = "1.4.1", features = [ "v4" ] }
ron = "0.8.0"
genpdf = { version = "0.2.0", features = ["images"] }
chrono = "0.4.26"
base64 = "0.21.2"
itertools = "0.11.0"
iced = { version = "0.10.0", features = [ "image", "tokio" ], optional = true }
opener = { version = "0.6.1", optional = true }
rfd = { version = "0.12.0", optional = true, default-features = false, features = [ "xdg-portal" ] }
octocrab = "0.31.2"
semver = "1.0.19"
relm4 = { version = "0.6", optional = true, features = [ "libadwaita", "gnome_44" ] }
relm4-icons = { version = "0.6", optional = true, features = [ "hourglass", "paper", "play", "menu", "lightbulb", "papyrus-vertical", "puzzle-piece", "question-round", "edit", "plus", "x-circular", "up", "down" ] }
rust-i18n = { version = "2.2.1", optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }
sys-locale = { version = "0.3.1", optional = true }

[build-dependencies]
glib-build-tools = "0.18.0"
