[package]
name = "testangel"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "testangel-executor"
path = "src/bin/executor.rs"
required-features = [ "cli" ]

[features]
default = [ "ui" ]
ui = [ "dep:relm4", "dep:relm4-icons", "dep:opener", "dep:fern", "dep:fluent", "dep:fluent-templates", "dep:once_cell", "dep:fuzzy-matcher", "dep:sys-locale", "dep:sourceview5" ]
cli = [ "dep:clap", "dep:pretty_env_logger" ]
windows-keep-console-window = []

[dependencies]
testangel-ipc = { path = "../testangel-ipc" }
clap = { version = "4.3.19", features = [ "derive" ], optional = true }
fern = { version = "0.6.2", optional = true }
libloading = "0.8"
log = "0.4.19"
image = { version = "0.25.0", default-features = false, features = ["png"] }
thiserror = "1.0"
pretty_env_logger = { version = "0.5.0", optional = true }
serde = { version = "1.0.180", features = [ "derive" ] }
uuid = { version = "1.4.1", features = [ "v4" ] }
ron = "0.8.0"
genpdf = { version = "0.2.0", features = ["images"] }
chrono = "0.4.26"
base64 = "0.22.0"
itertools = "0.12.1"
opener = { version = "0.7.0", optional = true }
octocrab = "0.38.0"
semver = "1.0.19"
relm4 = { version = "0.8", optional = true, features = [ "libadwaita", "gnome_44" ] }
relm4-icons = { version = "0.8", optional = true }
sourceview5 = { version = "0.8", optional = true }
fluent = { version = "0.16.0", optional = true }
fluent-templates = { version = "0.9.1", optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }
once_cell = { version = "1.18.0", optional = true }
sys-locale = { version = "0.3.1", optional = true }
mlua = { version = "0.9.7", features = [ "luau" ] }
pest = "2.7.9"
pest_derive = "2.7.9"
convert_case = "0.6.0"
